--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                         <div class="row">
                             <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-duration="0.8s">
                                 <div class="box">
-                                    <h4 class="title"><a href="">Key Club</a></h4>
+                                    <h4 class="title"><a href="https://chileskc.wixsite.com/website">Key Club</a></h4>
                                     <p class="description">We are a service club that helps provide opportunities for service hours for our members.</p>
                                     <p class="info">Welch<br>welchb@leonschools.net</p>
                                     <hr class="hr-blue" />
@@ -583,7 +583,7 @@
                                 <div class="box">
                                     <h4 class="title"><a href="">National English Honor Society</a></h4>
                                     <p class="description">This club does not have a description.</p>
-                                    <p class="info">Prichard<br>pricharda@leonschools.net</p>
+                                    <p class="info">Prichard<br>pricharda@leonschools.net<br> Shoenberger<br>shoenbergera@leonschools.net</p>
                                     <hr class="hr-blue" />
                                 </div>
                             </div>
